--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@ body {
 img {
   display: block;
   margin: 0 auto;
-  max-width: 700px;
   border-radius: 5px;
   margin-bottom: 20px;
+  max-width: 100%;
+  height: auto;
 }
 a {
   color: green;
